@@ -1,36 +1,0 @@
-<?xml version="1.0" standalone="no"?> <!--*- mode: xml -*-->
-<!DOCTYPE glade-interface SYSTEM "http://glade.gnome.org/glade-2.0.dtd">
-
-<glade-interface>
-
-<widget class="GtkAboutDialog" id="glchess_about_dialog">
-  <property name="visible">True</property>
-  <property name="destroy_with_parent">True</property>
-  <property name="name">glChess @VERSION@</property>
-  <property name="copyright">Copyright 2005-2006 Robert Ancell (and contributors)</property>
-  <property name="comments" translatable="yes">A 2D/3D chess interface for Gnome</property>
-  <property name="license">This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License version 2 as published by the Free Software Foundation.
-
-This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details. 
-
-You should have received a copy of the GNU General Public License along with this program; if not, write to the Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-
-2D Models:
-Copyright World Wide Web Consortium, (Massachusetts Institute of Technology, Institut National de Recherche en Informatique et en Automatique, Keio University). All Rights Reserved. http://www.w3.org/Consortium/Legal/
-</property>
-  <property name="wrap_license">True</property>
-  <property name="website">http://glchess.sourceforge.net</property>
-  <property name="website_label" translatable="yes">glChess homepage</property>
-  <property name="authors">Robert Ancell &lt;bob27@users.sourceforge.net&gt;</property>
-  <property name="artists">John-Paul Gignac (3D Models)
-Max Froumentin (2D Models)
-Hylke Bons (icon)</property>
-  <property name="translator_credits">Luca Marturana &lt;lucamarturana@gmail.com&gt; (It)
-Hakan Bekdas &lt;hakanbekdas@yahoo.com&gt; (tr)
-Many translators on launchpad.net.
-</property>
-  <property name="logo">glchess.svg</property>
-  <signal name="response" handler="_on_glchess_about_dialog_close" last_modification_time="Fri, 11 Aug 2006 12:44:07 GMT"/>
-</widget>
-
-</glade-interface>
